--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,9 +25,5 @@ dependencies {
     compile 'it.neokree:MaterialTabs:0.11'
     compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.balysv:material-ripple:1.0.1'
-    compile 'com.parse.bolts:bolts-android:1.1.2'
-    compile fileTree(dir: 'libs', include: 'Parse-1.7.1.jar')
-    compile files('libs/bolts-android-1.1.3.jar')
-    compile files('libs/Parse-1.9.3.jar')
-    compile files('libs/Parse-1.9.3.jar')
+    compile 'com.parse.bolts:bolts-android:1.+'
 }
