--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:appcompat-v7:22.2.1'
     compile 'it.neokree:MaterialTabs:0.11'
-    compile 'com.android.support:recyclerview-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.2.1'
     compile 'com.balysv:material-ripple:1.0.1'
     compile 'com.parse.bolts:bolts-android:1.+'
     compile 'xyz.danoz:recyclerviewfastscroller:0.1.3'
-
+    compile 'com.android.support:design:22.2.1'
 }
